Bug 658041 - Stack based marking for JSRopes. r=igor